--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -187,7 +187,7 @@
     <LinearLayout
         android:id="@+id/mainScreenBottomBar"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="@dimen/bottom_Bar_height"
         android:layout_alignParentBottom="true"
         android:background="@color/colorBottomBar"
         android:gravity="center_vertical"
@@ -200,7 +200,7 @@
             android:layout_gravity="center_vertical|center_horizontal"
             android:fontFamily="@font/roboto_light"
             android:textColor="@android:color/background_light"
-            android:textSize="16sp"/>
+            android:textSize="@dimen/main_screen_bottom_Bar_font_size1"/>
 
         <TextView
             android:id="@+id/websiteLbl"
@@ -210,7 +210,7 @@
             android:fontFamily="@font/roboto_normal_family"
             android:text="@string/vixiar_web"
             android:textColor="@android:color/background_light"
-            android:textSize="16sp"/>
+            android:textSize="@dimen/main_screen_bottom_Bar_font_size2"/>
 
     </LinearLayout>
 
