--- a/app/src/main/res/layout/bottom_bar_layout.xml
+++ b/app/src/main/res/layout/bottom_bar_layout.xml
@@ -5,7 +5,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="@dimen/bottom_Bar_height"
         android:background="@color/colorBottomBar"
         android:gravity="center_vertical"
         android:orientation="horizontal"
@@ -32,6 +32,7 @@
             android:layout_weight="1"
             android:alpha=".5"
             android:background="@null"
+            android:padding="10sp"
             android:scaleType="fitCenter"
             android:src="@drawable/training_button"/>
 
@@ -42,6 +43,7 @@
             android:layout_weight="1"
             android:alpha="1"
             android:background="@null"
+            android:padding="10sp"
             android:scaleType="fitCenter"
             android:src="@drawable/next_button"/>
 
