--- a/app/src/main/res/layout/custom_1btn_dialog_layout.xml
+++ b/app/src/main/res/layout/custom_1btn_dialog_layout.xml
@@ -20,7 +20,7 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/titleIcon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingBottom="18dp"
@@ -33,11 +33,12 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center_vertical"
-                android:background="@color/colorPrimary"
+                android:background="@null"
                 android:padding="10dp"
                 android:text="Title"
                 android:textAppearance="@android:style/TextAppearance.Large"
-                android:textColor="@android:color/white"/>
+                android:textColor="@android:color/white"
+                android:textSize="28dp"/>
         </LinearLayout>
 
         <TextView
@@ -49,7 +50,8 @@
             android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
             android:gravity="center"
-            android:text="Message"/>
+            android:text="Message"
+            android:textSize="20dp"/>
     </LinearLayout>
 
     <LinearLayout
@@ -58,40 +60,23 @@
         android:layout_marginBottom="10dp"
         android:gravity="center_horizontal"
         android:orientation="horizontal"
-        android:weightSum="4">
+        >
 
         <Button
-            android:id="@+id/button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="10dp"
-            android:background="@null"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:textAllCaps="false"
-            />
-
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:layout_gravity="center_vertical"
-            android:src="@drawable/dialog_vertical_line"/>
-
-        <Button
-            android:id="@+id/button1"
-            android:layout_width="wrap_content"
+            android:id="@+id/btnPositive"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="20dp"
+            android:layout_weight="5"
             android:background="@null"
+            android:gravity="center_vertical|center_horizontal"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
+            android:text="Test"
             android:textAllCaps="false"
-            />
+            android:textSize="24dp"/>
 
     </LinearLayout>
 </LinearLayout>
