--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorMainBackground"
     android:foregroundGravity="bottom"
+    android:keepScreenOn="true"
     android:gravity="center_horizontal"
     android:orientation="vertical">
 
