--- a/app/src/main/res/layout/activity_practice.xml
+++ b/app/src/main/res/layout/activity_practice.xml
@@ -6,6 +6,7 @@
     android:background="@color/colorMainBackground"
     android:foregroundGravity="bottom"
     android:gravity="center_horizontal"
+    android:keepScreenOn="true"
     android:orientation="vertical">
 
     <include
