--- a/app/src/main/res/layout/activity_testing_results.xml
+++ b/app/src/main/res/layout/activity_testing_results.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:foregroundGravity="bottom"
+    android:keepScreenOn="true"
     android:gravity="center_horizontal"
     android:orientation="vertical">
 
