--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,9 +47,10 @@
         android:orientation="vertical">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
+            android:onClick="onStartClick"
             android:orientation="horizontal"
             android:paddingStart="60dp">
 
@@ -58,10 +59,9 @@
                 android:layout_width="@dimen/main_screen_icon_size"
                 android:layout_height="@dimen/main_screen_icon_size"
                 android:background="@null"
-                android:onClick="onImageStartClick"
                 android:scaleType="fitXY"
                 android:src="@drawable/start_button"
-                android:visibility="visible"/>
+                android:visibility="visible" />
 
             <TextView
                 android:id="@+id/startTestLbl"
@@ -70,7 +70,7 @@
                 android:fontFamily="@font/roboto_light"
                 android:paddingStart="50dp"
                 android:text="@string/starttest"
-                android:textSize="@dimen/main_screen_label_size"/>
+                android:textSize="@dimen/main_screen_label_size" />
 
         </LinearLayout>
 
@@ -84,7 +84,7 @@
             android:src="@drawable/divider_line"/>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:orientation="horizontal"
@@ -97,7 +97,7 @@
                 android:background="@null"
                 android:scaleType="fitXY"
                 android:src="@drawable/settings_button"
-                android:visibility="visible"/>
+                android:visibility="visible" />
 
             <TextView
                 android:id="@+id/settingsLbl"
@@ -106,7 +106,7 @@
                 android:fontFamily="@font/roboto_light"
                 android:paddingStart="50dp"
                 android:text="@string/settings"
-                android:textSize="@dimen/main_screen_label_size"/>
+                android:textSize="@dimen/main_screen_label_size" />
 
         </LinearLayout>
 
@@ -120,7 +120,7 @@
             android:src="@drawable/divider_line"/>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:orientation="horizontal"
@@ -133,7 +133,7 @@
                 android:background="@null"
                 android:scaleType="fitXY"
                 android:src="@drawable/manual_button"
-                android:visibility="visible"/>
+                android:visibility="visible" />
 
             <TextView
                 android:id="@+id/manualLbl"
@@ -142,7 +142,7 @@
                 android:fontFamily="@font/roboto_light"
                 android:paddingStart="50dp"
                 android:text="@string/manual"
-                android:textSize="@dimen/main_screen_label_size"/>
+                android:textSize="@dimen/main_screen_label_size" />
             />
 
         </LinearLayout>
@@ -157,7 +157,7 @@
             android:src="@drawable/divider_line"/>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:orientation="horizontal"
@@ -170,7 +170,7 @@
                 android:background="@null"
                 android:scaleType="fitXY"
                 android:src="@drawable/training_video_button"
-                android:visibility="visible"/>
+                android:visibility="visible" />
 
             <TextView
                 android:id="@+id/trainingLbl"
@@ -179,7 +179,7 @@
                 android:fontFamily="@font/roboto_light"
                 android:paddingStart="50dp"
                 android:text="@string/training"
-                android:textSize="@dimen/main_screen_label_size"/>
+                android:textSize="@dimen/main_screen_label_size" />
             />
 
         </LinearLayout>
