--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -200,13 +200,24 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/textViewVersion"
+            android:id="@+id/txtStudyLocation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|center_horizontal"
             android:fontFamily="@font/roboto_light"
+            android:text="site"
             android:textColor="@android:color/background_light"
-            android:textSize="@dimen/main_screen_bottom_Bar_font_size1"/>
+            android:textSize="@dimen/bottom_bar_smaller_font_size" />
+
+        <TextView
+            android:id="@+id/txtViewVersion"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|center_horizontal"
+            android:fontFamily="@font/roboto_light"
+            android:text="version"
+            android:textColor="@android:color/background_light"
+            android:textSize="@dimen/main_screen_bottom_Bar_font_size1" />
 
         <TextView
             android:id="@+id/websiteLbl"
