Fixed Mantis issue #28.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -172,7 +172,7 @@
             android:paddingStart="60dp">
 
             <ImageButton
-                android:id="@+id/imageButton4"
+                android:id="@+id/trainingVideoButton"
                 android:layout_width="@dimen/main_screen_icon_size"
                 android:layout_height="@dimen/main_screen_icon_size"
                 android:background="@null"
