--- a/app/src/main/res/layout/activity_pat_info.xml
+++ b/app/src/main/res/layout/activity_pat_info.xml
@@ -257,8 +257,8 @@
                     android:layout_gravity="left"
                     android:layout_weight="4"
                     android:background="@null"
-                    android:cursorVisible="false"
-                    android:inputType="textPersonName"
+                    android:inputType="number"
+                    android:numeric="integer"
                     android:textAppearance="@style/PatInfoValue"
                     android:textColor="@null"/>
 
@@ -274,32 +274,6 @@
                 />
 
             </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/weightLbl1"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_weight="5"/>
-
-                <NumberPicker
-                    android:id="@+id/npWeight"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:theme="@style/PatInfoNumberPicker"/>
-
-                <TextView
-                    android:id="@+id/lbsLbl1"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_weight="5"/>
-            </LinearLayout>
-
 
             <ImageView
                 android:id="@+id/imageView12"
