--- a/app/src/main/res/layout/activity_factory_test.xml
+++ b/app/src/main/res/layout/activity_factory_test.xml
@@ -13,19 +13,31 @@
     <com.jjoe64.graphview.GraphView
         android:id="@+id/PPGgraph"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="400dp"
         android:layout_gravity="center"
         android:layout_marginBottom="30dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginStart="20dp"/>
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp" />
 
     <com.jjoe64.graphview.GraphView
         android:id="@+id/pressuregraph"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="400dp"
         android:layout_gravity="center"
         android:layout_marginEnd="20dp"
         android:layout_marginStart="20dp"/>
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="50dp"
+        android:gravity="center_horizontal"
+        android:text="@string/test_mode"
+        android:textSize="36dp" />
 
 
 </android.widget.LinearLayout>
