--- a/app/src/main/res/layout/activity_factory_test.xml
+++ b/app/src/main/res/layout/activity_factory_test.xml
@@ -29,7 +29,7 @@
         android:layout_marginStart="20dp"/>
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textViewMessage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
