Removed all unnecessary files.  This version jumps right to the test screen.  It will save the raw and filtered data to one file and the peaks and valleys to another file.

--- a/app/src/main/res/layout/connection_dialog.xml
+++ b/app/src/main/res/layout/connection_dialog.xml
@@ -8,7 +8,7 @@
 
     <ProgressBar
         android:id="@+id/progressBarConnection"
-        style="@style/ProgressBarStyleVixiar"
+        style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:indeterminate="true"
