--- a/app/src/main/res/layout/activity_factory_test.xml
+++ b/app/src/main/res/layout/activity_factory_test.xml
@@ -28,16 +28,13 @@
         android:layout_marginEnd="20dp"
         android:layout_marginStart="20dp"/>
 
-    <TextView
-        android:id="@+id/textViewMessage"
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/mainButton"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="50dp"
-        android:gravity="center_horizontal"
-        android:text="@string/test_mode"
-        android:textSize="36dp" />
+        android:layout_marginTop="100dp"
+        android:padding="20dp"
+        android:text="Button" />
 
 
 </android.widget.LinearLayout>
