--- a/app/src/main/res/layout/activity_factory_test.xml
+++ b/app/src/main/res/layout/activity_factory_test.xml
@@ -5,7 +5,8 @@
     android:id="@+id/rootLinearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:foregroundGravity="bottom"
+    android:layout_gravity="bottom"
+    android:layout_alignParentBottom="true"
     android:keepScreenOn="true"
     android:gravity="center_horizontal"
     android:orientation="vertical">
@@ -35,6 +36,14 @@
         android:layout_marginTop="100dp"
         android:padding="20dp"
         android:text="Button" />
+
+    <TextView
+        android:id="@+id/versionString"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="2"
+        android:gravity="bottom"
+        android:text="TextView" />
 
 
 </android.widget.LinearLayout>
