--- a/app/src/main/res/layout/activity_factory_test.xml
+++ b/app/src/main/res/layout/activity_factory_test.xml
@@ -14,34 +14,28 @@
     <com.jjoe64.graphview.GraphView
         android:id="@+id/PPGgraph"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:layout_gravity="center"
-        android:layout_marginBottom="30dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp" />
+        android:layout_height="match_parent"
+        android:layout_margin="10dp"
+        android:layout_weight="3"  />
 
     <com.jjoe64.graphview.GraphView
         android:id="@+id/pressuregraph"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:layout_gravity="center"
-        android:layout_marginEnd="20dp"
-        android:layout_marginStart="20dp"/>
+        android:layout_height="match_parent"
+        android:layout_margin="10dp"
+        android:layout_weight="3"/>
 
     <Button
         android:id="@+id/mainButton"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
-        android:padding="20dp"
+        android:layout_height="match_parent"
+        android:layout_weight="5"
         android:text="Button" />
 
     <TextView
         android:id="@+id/versionString"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="2"
+        android:layout_height="20dp"
         android:gravity="bottom"
         android:text="TextView" />
 
