--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,6 +22,22 @@
         <item name="android:textColorPrimary">@color/colorPatientEntryNormalValue</item>
     </style>
 
+    <style name="QuestionText" parent="@android:style/TextAppearance.Medium">
+        <item name="android:textSize">@dimen/question_text_font_size</item>
+        <item name="android:fontFamily">"fonts/Roboto-Light.ttf"</item>
+        <item name="android:textColorHighlight">@color/colorPatientEntryHighlightedValue</item>
+        <item name="android:textColor">@color/colorPatientEntryNormalValue</item>
+        <item name="colorAccent">@color/colorPatientEntryHighlightedValue</item>
+    </style>
+
+    <style name="QuestionChoice" parent="@android:style/TextAppearance.Medium">
+        <item name="android:textSize">@dimen/question_choice_font_size</item>
+        <item name="android:fontFamily">"fonts/Roboto-Light.ttf"</item>
+        <item name="android:textColorHighlight">@color/colorPatientEntryHighlightedValue</item>
+        <item name="android:textColor">@color/colorPatientEntryNormalValue</item>
+        <item name="colorAccent">@color/colorPatientEntryHighlightedValue</item>
+    </style>
+
     <style name="ProgressBarStyleVixiar" parent="Base.Widget.AppCompat.ProgressBar">
         <item name="android:indeterminateDuration">60000</item>
     </style>
