--- a/app/src/main/res/layout/activity_pat_info.xml
+++ b/app/src/main/res/layout/activity_pat_info.xml
@@ -116,7 +116,7 @@
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:layout_weight="5"
-                    android:fontFamily="fonts/Roboto-Light.ttf"
+                    android:fontFamily="@font/roboto_light"
                     android:paddingStart="10dp"
                     android:textSize="@dimen/main_screen_label_size"/>
 
