--- a/app/src/main/res/layout/activity_testing_results.xml
+++ b/app/src/main/res/layout/activity_testing_results.xml
@@ -105,13 +105,13 @@
                 android:id="@+id/imgBtnGraph1"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
-                android:layout_weight="1"
                 android:layout_marginEnd="50dp"
+                android:layout_weight="1"
                 android:background="@null"
                 android:onClick="onStartClick"
                 android:scaleType="fitXY"
-                android:visibility="invisible"
-                android:src="@drawable/graph"/>
+                android:src="@drawable/graph"
+                android:visibility="invisible" />
         </LinearLayout>
 
         <com.jjoe64.graphview.GraphView
