--- a/app/src/main/res/layout/activity_practice.xml
+++ b/app/src/main/res/layout/activity_practice.xml
@@ -23,7 +23,7 @@
         android:layout_centerInParent="true"
         android:orientation="vertical">
 
-        <com.vixiar.indicor.Graphics.PracticePressureGraph
+        <com.vixiar.indicor2.Graphics.PracticePressureGraph
             android:id="@+id/practicePressureGraph"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
