Limit the notes field to 256 characters.

--- a/app/src/main/res/layout/activity_pat_info.xml
+++ b/app/src/main/res/layout/activity_pat_info.xml
@@ -524,11 +524,12 @@
                     android:gravity="top|left"
                     android:inputType="text|textMultiLine"
                     android:textAppearance="@style/PatInfoValue"
+                    android:maxLength="256"
                     android:textColor="@null"/>
                 />
 
             </LinearLayout>
-
+6
             <ImageView
                 android:id="@+id/imageView4"
                 android:layout_width="match_parent"
