--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -33,5 +33,7 @@
 
     <dimen name="question_text_font_size">30sp</dimen>
     <dimen name="question_choice_font_size">24sp</dimen>
+    <dimen name="reminder_text_font_size">32sp</dimen>
+    <dimen name="reminder_title_font_size">48sp</dimen>
 
 </resources>
