--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,6 +30,22 @@
         <item name="colorAccent">@color/colorPatientEntryHighlightedValue</item>
     </style>
 
+    <style name="ReminderText" parent="@android:style/TextAppearance.Medium">
+        <item name="android:textSize">@dimen/reminder_text_font_size</item>
+        <item name="android:fontFamily">"fonts/Roboto-Light.ttf"</item>
+        <item name="android:textColorHighlight">@color/colorPatientEntryHighlightedValue</item>
+        <item name="android:textColor">@color/colorPatientEntryNormalValue</item>
+        <item name="colorAccent">@color/colorPatientEntryHighlightedValue</item>
+    </style>
+
+    <style name="ReminderTitle" parent="@android:style/TextAppearance.Medium">
+        <item name="android:textSize">@dimen/reminder_title_font_size</item>
+        <item name="android:fontFamily">"fonts/Roboto-Light.ttf"</item>
+        <item name="android:textColorHighlight">@color/colorPatientEntryHighlightedValue</item>
+        <item name="android:textColor">@color/colorPatientEntryNormalValue</item>
+        <item name="colorAccent">@color/colorPatientEntryHighlightedValue</item>
+    </style>
+
     <style name="QuestionChoice" parent="@android:style/TextAppearance.Medium">
         <item name="android:textSize">@dimen/question_choice_font_size</item>
         <item name="android:fontFamily">"fonts/Roboto-Light.ttf"</item>
